opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: ["Anil Madhavapeddy" "David Scott"]
license: "ISC"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/mirage-console"
doc: "https://mirage.github.io/mirage-console/"
bug-reports: "https://github.com/mirage/mirage-console/issues"
depends: [
  "ocaml" {>= "4.04.2"}
  "dune" {build & >= "1.0"}
  "mirage-console" {>= "2.2.0"}
  "mirage-console-lwt" {>= "2.2.0"}
  "lwt"
  "cstruct"
  "ipaddr"
  "io-page"
  "cmdliner"
  "xenstore_transport"
  "xenctrl"
  "xen-gnt"
  "mirage-console-xen-backend"
  "mirage-console-unix"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/mirage-console.git"
synopsis: "CLI implementations of Mirage console frontend for Xen"
