opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: ["Anil Madhavapeddy" "David Scott"]
license: "ISC"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/mirage-console"
doc: "https://mirage.github.io/mirage-console/"
bug-reports: "https://github.com/mirage/mirage-console/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.0"}
  "io-page" {>= "2.0.0"}
  "xenstore"
  "shared-memory-ring"
  "lwt"
  "mirage-flow"
  "mirage-console" {=version}
  "mirage-console-xen-proto" {=version}
  "mirage-xen" {>= "6.0.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/mirage-console.git"
synopsis: "Implementation of Mirage console for Xen"
pin-depends:[
  [ "mirage-xen.dev" "git+https://github.com/dinosaure/mirage-xen.git#b7b5eaebead17a864b53085b60351a1648ba05b1" ]
  [ "mirage-runtime.4.0.0" "git+https://github.com/mirage/mirage.git#59101cd795e741982a0a4580c113072339e1389b" ]
  [ "functoria-runtime.4.0.0" "git+https://github.com/mirage/mirage.git#59101cd795e741982a0a4580c113072339e1389b" ]
  [ "functoria.4.0.0" "git+https://github.com/mirage/mirage.git#59101cd795e741982a0a4580c113072339e1389b" ]
]
